# hermes-sonus

./: .gitignore  LICENSE  README.md  plugin.yaml  pyproject.toml
dashboard/: manifest.json  plugin_api.py
hermes_sonus/: __init__.py  api.py
hermes_sonus/eeg/: __init__.py  connection.py  experience.py  processor.py
hermes_sonus/mcp/: __init__.py  batch_generate.py  build_payload.py  handle_callback.py  http_client.py  poll_status.py  server.py
hermes_sonus/music/: __init__.py  library.py  midi.py  player.py  suno.py  tasks.py
scripts/: fix_paths.py  probe_endpoints.py
skills/sonus-prompt-engineering/: SKILL.md
skills/sonus-prompt-engineering/references/: api-integration.md  eeg-album-dna.md  examples.md  genres.json  music-theory.md  resonance-feedback.md  suno-deep.md  template.md
skills/sonus-prompt-engineering/templates/: prompt-format.md
tests/: conftest.py  test_album.py  test_eeg_handlers.py  test_eeg_processing.py  test_library.py  test_mcp_layer.py  test_midi.py  test_player.py  test_suno.py  test_tasks.py
